# phaeton

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml
python/phaeton/: __init__.py  _internal.py  engine.py  exceptions.py  guard.py  pipeline.py
src/: engine.rs  error.rs  lib.rs
src/processors/: cast.rs  filter.rs  io.rs  mod.rs  probe.rs  text.rs
src/streaming/: mod.rs
