[package]
name = "phaeton"
version = "0.1.2"
edition = "2021"
authors = ["Your Name <zahraandzakiits@gmail.com>"]
description = "A high-performance Python library for preprocessing and sanitizing raw data streams, accelerated by Rust."
license = "MIT"

[lib]
name = "_phaeton"
crate-type = ["cdylib"]

[dependencies]
# Python Bridge
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
pythonize = "0.20"

# Parallelism (Core Performance)
rayon = "1.8"
num_cpus = "1.16"

# I/O & Parsing
csv = "1.3"
memmap2 = "0.9"
arrow = { version = "53.2", features = ["ipc"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Text Processing
regex = "1.10"
strsim = "0.11"

# Encoding
encoding_rs = "0.8"
encoding_rs_io = "0.1"

# Date/Time
chrono = "0.4"

# Security
sha2 = "0.10"
base64 = "0.21"

# Error Handling
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true