[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "phaeton"
version = "0.2.1"
description = "High-performance preprocessing and streaming data cleaning, powered by Rust."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Zahraan Dzakii Tsaqiif", email = "zahraandzakiits@gmail.com"}
]
requires-python = ">=3.8"
keywords = ["data-cleaning", "rust", "preprocessing", "etl", "high-performance", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/rannd1nt/phaeton"
Repository = "https://github.com/rannd1nt/phaeton"
Issues = "https://github.com/rannd1nt/phaeton/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "maturin>=1.0",
    "faker>=19.0"
]

[tool.maturin]
python-source = "python"
module-name = "phaeton._phaeton"