[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "phaeton"
version = "0.2.2"
description = "A high-performance Python library for preprocessing and sanitizing raw data streams, accelerated by Rust."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Zahraan Dzakii Tsaqiif", email = "zahraandzakiits@gmail.com"}
]
requires-python = ">=3.8"
keywords = ["data-cleaning", "rust", "preprocessing", "etl", "high-performance", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/rannd1nt/phaeton"
Repository = "https://github.com/rannd1nt/phaeton"
Issues = "https://github.com/rannd1nt/phaeton/issues"
Documentation = "https://github.com/rannd1nt/phaeton#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "maturin>=1.0",
    "faker>=19.0"
]

[tool.maturin]
python-source = "python"
module-name = "phaeton._phaeton"